--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,8 @@
       "rootDir": ".",
   
       "lib": ["es2017"],
-      "module": "none",
+      //"module": "none",
+      "module": "esnext",
       // "noLib": true,
       "target": "es3",
       "types": ["google-apps-script"],
@@ -39,8 +40,7 @@
       "pretty": true,
       // "sourceMap": true,
       "outDir": "../build"
-
     },
-    "include": ["**/*.ts"],
+    "include": ["**/*.ts"]
   }
   
